# solution_wps_provider_sdk_rust

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  preview.rs
src/error/: mod.rs  provider_error.rs
src/model/: digest_type.rs  download_info.rs  file.rs  mod.rs  permission.rs  provider_response.rs  user.rs
src/service/: mod.rs  perview.rs
