[package]
name = "weboffice_provider_v3_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = { version = "^0.8" }
log = { version = "^0.4" }
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_builder = { version = "^0.12" }
